--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <ul class='slider'>
           <!--URL ko change kar -->
-            <li class='item' style="background-image: url('itachi.jpg')">
+            <li class='item' style="background-image: url('itachi-uchiha-naruto-amoled-black-background-minimal-art-3840x2160-6478.jpg')">
                 <div class='content'>
                     <h2 class='title'>HEY CUTIE...</h2>
                     <p class='description'> Be my Bugatti, I'll be yours Audi RS6 . </p>
